gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/parse12967b.d
version https://git-lfs.github.com/spec/v1
oid sha256:017e0baa2c2575d2c4988f2d90bf58af1b9ced0ea2c6235c9b49349cc4fdff3c
size 2393
